update training scripts

--- a/training/selfplay.cfg
+++ b/training/selfplay.cfg
@@ -10,19 +10,19 @@ validationProp = 0.03
 
 useGraphSearch=true
 #nodeTableShardsPowerOfTwo=16
-numNNServerThreadsPerModel = 7
+numNNServerThreadsPerModel = 6
 trtDeviceToUseThread0 = 7
 trtDeviceToUseThread1 = 6
-trtDeviceToUseThread2 = 1
+trtDeviceToUseThread2 = 5
 trtDeviceToUseThread3 = 4
 trtDeviceToUseThread4 = 3
 trtDeviceToUseThread5 = 2
-trtDeviceToUseThread6 = 5
+trtDeviceToUseThread6 = 1
 trtDeviceToUseThread7 = 0
 
 switchNetsMidGame=false
 
-numGameThreads = 1280
+numGameThreads = 1024
 nnMaxBatchSize =256
 
 maxVisits = 150
@@ -109,8 +109,8 @@ numSearchThreads = 1
 
 # GPU Settings-------------------------------------------------------------------------------
 
-nnCacheSizePowerOfTwo = 23
-nnMutexPoolSizePowerOfTwo = 19
+nnCacheSizePowerOfTwo = 22
+nnMutexPoolSizePowerOfTwo = 18
 nnRandomize = true
 
 
@@ -143,11 +143,18 @@ dynamicScoreUtilityFactor = 0.00
 #noResultUtilityForWhite = 0.0
 #drawEquivalentWinsForWhite = 0.5
 
+
+noResultUtilityReduce=0.5
+cpuctExploration = 1.0
+cpuctExplorationLog = 0.45
+cpuctExplorationBase = 500
+
 rootEndingBonusPoints = 0.0
 rootPruneUselessMoves = false
 
 rootPolicyTemperatureEarly = 1.8
-rootPolicyTemperature = 1.1
+rootPolicyTemperature = 1.2
+nnPolicyTemperature = 1.1
 
 #cpuctExploration = 1.1
 #cpuctExplorationLog = 0.0
