--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+
+
+*.bak
+.vs
+
+tmp*.txt
+LinuxCompile*/
+
+cpp/build
+cpp/build_trt
+cpp/build_cuda
+cpp/build_opencl
+cpp/build_eigen
+cpp/out
+
+
+
+
+
+
+
 *.[oa]
 *.exe
 *~
