--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -182,6 +182,7 @@ add_executable(katago
   core/timer.cpp
   game/board.cpp
   game/rules.cpp
+  game/gamelogic.cpp
   game/boardhistory.cpp
   game/graphhash.cpp
   dataio/sgf.cpp
@@ -205,7 +206,6 @@ add_executable(katago
   search/searchresults.cpp
   search/searchhelpers.cpp
   search/searchexplorehelpers.cpp
-  search/searchmirror.cpp
   search/searchmultithreadhelpers.cpp
   search/searchnnhelpers.cpp
   search/searchtimehelpers.cpp
@@ -225,30 +225,8 @@ add_executable(katago
   program/play.cpp
   program/selfplaymanager.cpp
   ${GIT_HEADER_FILE_ALWAYS_UPDATED}
-  tests/testboardarea.cpp
-  tests/testboardbasic.cpp
   tests/testcommon.cpp
-  tests/testconfig.cpp
-  tests/testmisc.cpp
   tests/testnnevalcanary.cpp
-  tests/testrules.cpp
-  tests/testscore.cpp
-  tests/testsgf.cpp
-  tests/testsymmetries.cpp
-  tests/testnninputs.cpp
-  tests/testownership.cpp
-  tests/testsearchcommon.cpp
-  tests/testsearchnonn.cpp
-  tests/testsearch.cpp
-  tests/testsearchv3.cpp
-  tests/testsearchv8.cpp
-  tests/testsearchv9.cpp
-  tests/testsearchmisc.cpp
-  tests/testtime.cpp
-  tests/testtrainingwrite.cpp
-  tests/testnn.cpp
-  tests/tinymodel.cpp
-  tests/tinymodeldata.cpp
   distributed/client.cpp
   command/commandline.cpp
   command/analysis.cpp
