simple uci (or uai for ataxx) protocol

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -235,6 +235,7 @@ add_executable(katago
   command/genbook.cpp
   command/gputest.cpp
   command/gtp.cpp
+  command/uci.cpp
   command/match.cpp
   command/matchauto.cpp
   command/misc.cpp
