--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -245,6 +245,9 @@ add_executable(katago
   command/sandbox.cpp
   command/selfplay.cpp
   command/tune.cpp
+  forbiddenPoint/ForbiddenPointFinder.cpp
+  vcfsolver/VCFsolver.cpp
+  vcfsolver/VCFHashTable.cpp
   main.cpp
   )
 
