update training scripts: change some default params

--- a/python/scripts/selfplay.cfg
+++ b/python/scripts/selfplay.cfg
@@ -4,8 +4,17 @@ maxVisits = 150
 cheapSearchProb = 0.75  # Do cheap searches with this probaiblity
 cheapSearchVisits = 30  # Number of visits for cheap search
 
+komiMean = 7.0 # Specify explicit komi
+komiStdev = 2.0  # Standard deviation of random variation to komi.
+komiBigStdevProb = 0.2 # Probability of applying komiBigStdev
+komiBigStdev = 12.0 # Standard deviation of random big variation to komi
+komiBiggerStdevProb = 0.06 # Probability of applying komiBiggerStdev
+komiBiggerStdev = 30.0 # Standard deviation of random bigger variation to komi
 
-numGameThreads = 600
+numNNServerThreadsPerModel = 2
+gpuToUseThread0 = 0
+gpuToUseThread1 = 1  
+numGameThreads = 1100
 nnMaxBatchSize = 512
 
 # Logs------------------------------------------------------------------------------------
@@ -32,14 +41,14 @@ firstFileRandMinProp = 0.15
 
 # These take dominance - if a game is forked for any of these reasons, that will be the next game played.
 # For forked games, randomization of rules and "initGamesWithPolicy" is disabled, komi is made fair with prob "forkCompensateKomiProb".
-earlyForkGameProb = 0.04  # Fork to try alternative opening variety with this probability
+earlyForkGameProb = 0.00  # Fork to try alternative opening variety with this probability
 earlyForkGameExpectedMoveProp = 0.025  # Fork roughly within the first (boardArea * this) many moves
-forkGameProb = 0.01 # Fork to try alternative crazy move anywhere in game with this probability if not early forking
+forkGameProb = 0.0 # Fork to try alternative crazy move anywhere in game with this probability if not early forking
 forkGameMinChoices = 3   # Choose from the best of at least this many random choices
 earlyForkGameMaxChoices = 12  # Choose from the best of at most this many random choices
 forkGameMaxChoices = 36  # Choose from the best of at most this many random choices
 # Otherwise, with this probability, learn a bit more about the differing evaluation of seki in different rulesets.
-sekiForkHackProb = 0.02
+sekiForkHackProb = 0.0
 
 # Otherwise, play some proportion of games starting from SGF positions, with randomized rules (ignoring the sgf rules)
 # On SGF positions, high temperature policy init is allowed
@@ -102,13 +111,10 @@ bSizes = 7,8,9
 bSizeRelProbs = 1,1,8
 allowRectangleProb = 0.50
 
-komiAuto = True  # Automatically adjust komi to what the neural nets think are fair based on the empty board, but still apply komiStdev.
-# komiMean = 7.0 # Specify explicit komi
-komiStdev = 1.0  # Standard deviation of random variation to komi.
-komiBigStdevProb = 0.06 # Probability of applying komiBigStdev
-komiBigStdev = 12.0 # Standard deviation of random big variation to komi
+#komiAuto = True  # Automatically adjust komi to what the neural nets think are fair based on the empty board, but still apply komiStdev.
 
-handicapProb = 0.10 # Probability of handicap game
+
+handicapProb = 0.00 # Probability of handicap game
 handicapCompensateKomiProb = 0.50 # In handicap games, adjust komi to fair with this probability based on the handicap placement
 forkCompensateKomiProb = 0.80     # For forks, adjust komi to fair with this probability based on the forked position
 sgfCompensateKomiProb = 0.90      # For sgfs, adjust komi to fair with this probability based on the specific starting position
@@ -124,7 +130,6 @@ numSearchThreads = 1
 
 nnCacheSizePowerOfTwo = 25
 nnMutexPoolSizePowerOfTwo = 20
-numNNServerThreadsPerModel = 1
 nnRandomize = true
 
 # CUDA GPU settings--------------------------------------
@@ -134,8 +139,8 @@ nnRandomize = true
 # cudaDeviceToUseModel0Thread0 = 3 #use device 3 for model 0, server thread 0
 # cudaDeviceToUseModel0Thread1 = 2 #use device 2 for model 0, server thread 1
 
-cudaUseFP16 = auto
-cudaUseNHWC = auto
+useFP16 = auto
+useNHWC = auto
 
 # Root move selection and biases------------------------------------------------------------------------------
 
